[Enh]: Add logos in Landing, Navbar and Authentication pages
Change the previous logo with new one in website title, navigation bar
on Landing Page, Features Image that are shown on Landing Page and in
Authentication Pages.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/discordFavi.ico" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/discordPrimary.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +14,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discord | Your Place to Talk and Hang Out</title>
+    <title>ConnectVerse | Your Place to Talk and Hang Out</title>
   </head>
   <body class="h-full">
     <div id="root" class="h-full"></div>
